--- a/index.html
+++ b/index.html
@@ -14,11 +14,41 @@
   <section id="hero"></section>
   <section id="informacion"></section>
   <section id="conduce"></section>
-  <section id="tarifa"></section>
+
+  <section id="tarifa" class="bg-goldenrod">
+      <div class="container">
+          <div class="row">
+              <div class="col-sm-6 col-md-6 col-lg-6">
+                  <h2>Tarifas</h2>
+                  <p>Consulta las tarifas LabCar aquí</p>
+                  <form class="form-inline">
+                      <p>
+                          <span class="glyphicon glyphicon-record"></span>
+                          <input class="input-tarifa" type="text" placeholder="Ingrese su punto de partida" id="origen">
+                      </p>
+
+                      <div class="">
+                          <span class="glyphicon glyphicon-send"></span>
+                          <input class="input-tarifa" type="text" placeholder="Ingrese su punto de destino" id="destino">
+                      </div>
+                      <div class="text-center">
+                          <button class="btn btn-default" id="ruta">¡TRAZAR RUTA!</button>
+                      </div>
+                      <p id="costo"></p>
+                  </form>
+              </div>
+              <div class="col-sm-6 col-md-6 col-lg-6 visible-sm visible-md visible-lg">
+                  <div class="border-map">
+                      <div id="mapa"></div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
   <footer></footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZgh9sZUbFx0QAgEyGO_7qzr3DgyAomqs&callback=initMap"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZgh9sZUbFx0QAgEyGO_7qzr3DgyAomqs&libraries=places&callback=initMap"></script>
 </body>
 </html>
