--- a/index.html
+++ b/index.html
@@ -21,21 +21,19 @@
               <div class="col-sm-6 col-md-6 col-lg-6">
                   <h2>Tarifas</h2>
                   <p>Consulta las tarifas LabCar aquí</p>
-                  <form class="form-inline">
-                      <p>
-                          <span class="glyphicon glyphicon-record"></span>
-                          <input class="input-tarifa" type="text" placeholder="Ingrese su punto de partida" id="origen">
-                      </p>
+                  <div>
+                      <span class="glyphicon glyphicon-record"></span>
+                      <input class="input-tarifa" type="text" placeholder="Ingrese su punto de partida" id="origen" required>
+                  </div>
 
-                      <div class="">
-                          <span class="glyphicon glyphicon-send"></span>
-                          <input class="input-tarifa" type="text" placeholder="Ingrese su punto de destino" id="destino">
-                      </div>
-                      <div class="text-center">
-                          <button class="btn btn-default" id="ruta">¡TRAZAR RUTA!</button>
-                      </div>
-                      <p id="costo"></p>
-                  </form>
+                  <div>
+                      <span class="glyphicon glyphicon-send"></span>
+                      <input class="input-tarifa" type="text" placeholder="Ingrese su punto de destino" id="destino" required>
+                  </div>
+                  <div class="text-center">
+                      <button class="btn btn-default" id="ruta">¡TRAZAR RUTA!</button>
+                  </div>
+                  <p id="costo" class="text-center"></p>
               </div>
               <div class="col-sm-6 col-md-6 col-lg-6 visible-sm visible-md visible-lg">
                   <div class="border-map">
