poniendo fuente raleway a titulo y boton

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container">
           <div class="row">
               <div class="col-sm-6 col-md-6 col-lg-6">
-                  <h2>Tarifas</h2>
+                  <h2 class="font-raleway">Tarifas</h2>
                   <p>Consulta las tarifas LabCar aquí</p>
                   <div>
                       <span class="glyphicon glyphicon-record"></span>
@@ -31,7 +31,7 @@
                       <input class="input-tarifa" type="text" placeholder="Ingrese su punto de destino" id="destino" required>
                   </div>
                   <div class="text-center">
-                      <button class="btn btn-default" id="ruta">¡TRAZAR RUTA!</button>
+                      <button class="btn btn-default font-raleway" id="ruta">¡TRAZAR RUTA!</button>
                   </div>
                   <p id="costo" class="text-center"></p>
               </div>
