--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
 </head>
 <body>
   <header></header>
-  <section id="hero"></section>
+  <section id="hero" class="font-raleway">
+    <div class="registro bg-goldenrod">
+      <h1 class="hidden-xs">Disfruta del viaje
+        <br>Eres dueño de tu tiempo
+      </h1>
+      <h1 class="visible-xs">Comienza a
+        <br>Viajar con
+      </h1>
+      <h3>
+        <span class="hidden-xs">Viaja con</span>
+        <img class="logo-blanco" src="assets/img/logo-blanco.png" alt="">
+      </h3>
+      <h6 class="text-uppercase hidden-xs">registrate</h6>
+      <div class="separador text-center hidden-xs">
+        <hr>
+        <span>O bien</span>
+        <hr>
+      </div>
+      <button class="btn btn-default hidden-xs">Conviértete en conductor</button>
+      <button class="btn btn-default visible-xs">Descarga el App</button>
+    </div>
+  </section>
   <section id="informacion"></section>
   <section id="conduce"></section>
   <section id="tarifa"></section>
@@ -19,6 +40,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZgh9sZUbFx0QAgEyGO_7qzr3DgyAomqs&callback=initMap"></script>
+  <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZgh9sZUbFx0QAgEyGO_7qzr3DgyAomqs&callback=initMap"></script> -->
 </body>
 </html>
