--- a/index.html
+++ b/index.html
@@ -12,13 +12,49 @@
 <body>
   <header></header>
   <section id="hero"></section>
-  <section id="informacion"></section>
-  <section id="conduce"></section>
+  <section id="informacion" class="bg-goldenrod">
+    <div class="container-fluid containerMobile">
+      <div class="row">
+        <div class="col-md-10 col-xs-12">
+          <div class="col-md-5 col-xs-12 text-center imgMobile">
+            <div class="visible-xs visible-sm">
+              La nueva app
+            </div>
+            <img src="assets/img/celular.png" alt="celular">
+          </div>
+          <div class="col-md-4 col-md-offset-1 visible-md visible-lg">
+            <p class="font-raleway">Descarga la nueva app</p>
+            <p class="">La versión actualizada de LabCar está llena de nuevas funciones para llegar a donde quieras aún más fácil y rápido.</p>
+            <p class="">Con solo tocar un botón,un auto llega justo a tu ubicación.Súbete y no te preocupes : tu conductor sabe exactamente donde ir</p>
+          </div>
+          <div class="padd-top col-xs-12 visible-xs visible-sm text-center ">
+            Llega a tu destino aun mas rápido
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="conduce" class="containerConduce">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-4 col-md-offset-8 col-xs-12 bg-whiteBlack">
+          <div class="textConduce">
+            <h2 class="font-raleway">
+              Conduce cuando quieras
+            </h2>
+            <div class="subTitle">
+              LabCar es una opción flexible para alcanzar tus metas financieras.
+            </div>
+            <button type="button" name="button" class="btn btn-default bg-goldenrod">Conviertete en un conductor</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <section id="tarifa"></section>
   <footer></footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZgh9sZUbFx0QAgEyGO_7qzr3DgyAomqs&callback=initMap"></script>
-</body>
+  </body>
 </html>
