--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
+  <link rel="stylesheet" href="assets/icons/icons.css">
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/main.css">
   <title>Labcar</title>
@@ -16,16 +17,15 @@
   <section id="conduce"></section>
 
   <section id="tarifa" class="bg-goldenrod">
-      <div class="container">
+      <div class="container-fluid">
           <div class="row">
-              <div class="col-sm-6 col-md-6 col-lg-6">
+              <div class="col-sm-5 col-sm-offset-1">
                   <h2 class="font-raleway">Tarifas</h2>
                   <p>Consulta las tarifas LabCar aquí</p>
                   <div>
                       <span class="glyphicon glyphicon-record"></span>
                       <input class="input-tarifa" type="text" placeholder="Ingrese su punto de partida" id="origen" required>
                   </div>
-
                   <div>
                       <span class="glyphicon glyphicon-send"></span>
                       <input class="input-tarifa" type="text" placeholder="Ingrese su punto de destino" id="destino" required>
@@ -35,7 +35,7 @@
                   </div>
                   <p id="costo" class="text-center"></p>
               </div>
-              <div class="col-sm-6 col-md-6 col-lg-6 visible-sm visible-md visible-lg">
+              <div class="col-sm-5 col-sm-pull-1 col-md-6 col-lg-6 hidden-xs">
                   <div class="border-map">
                       <div id="mapa"></div>
                   </div>
@@ -43,7 +43,61 @@
           </div>
       </div>
   </section>
-  <footer></footer>
+
+  <footer>
+    <div class="container text-white padding-y">
+      <img src="assets/img/logo-blanco.png" alt="Logo blanco">
+      <hr>
+      <div class="row flex">
+        <div class="col-md-3 hidden-xs hidden-sm">
+          <a href="#"><i class="icon-facebook"></i></a>
+          <a href="#"><i class="icon-twitter"></i></a>
+          <a href="#"><i class="icon-linkedin2"></i></a>
+          <a href="#"><i class="icon-appleinc"></i></a>
+          <a href="#"><i class="icon-play3"></i></a>
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <ul class="list-group list-unstyled">
+            <li class="list-group"><a href="#">Viaja</a></li>
+            <li class="list-group"><a href="#">Conduce</a></li>
+            <li class="list-group"><a href="#">Ciudades</a></li>
+            <li class="list-group"><a href="#">Tarifas</a></li>
+            <li class="list-group"><a href="#">Entregas</a></li>
+            <li class="list-group"><a href="#">Cómo funciona</a></li>
+            <li class="list-group"><a href="#">Países</a></li>
+            <li class="list-group"><a href="#">Seguridad</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 hidden-xs hidden-sm">
+          <ul class="list-group list-unstyled">
+            <li class="list-group"><a href="#">Oportunidades</a></li>
+            <li class="list-group"><a href="#">Nuestra historia</a></li>
+            <li class="list-group"><a href="#">API de LabCar</a></li>
+            <li class="list-group"><a href="#">Eventos</a></li>
+            <li class="list-group"><a href="#">Desarrolladores</a></li>
+            <li class="list-group"><a href="#">Servicios</a></li>
+            <li class="list-group"><a href="#">Laboratoria</a></li>
+            <li class="list-group"><a href="#">Coders</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <div class="visible-xs visible-sm icons">
+            <a href="#"><i class="icon-facebook"></i></a>
+            <a href="#"><i class="icon-twitter"></i></a>
+            <a href="#"><i class="icon-linkedin2"></i></a>
+            <a href="#"><i class="icon-appleinc"></i></a>
+            <a href="#"><i class="icon-play3"></i></a>
+          </div>
+          <div class="reverse">
+            <img src="assets/img/app-store.png" alt="Apple store">
+            <img src="assets/img/google-play.png" alt="Google play">
+          </div>
+        </div>
+      </div>
+      <hr>
+      <p class="text-center">© 2017 LabCar technologies Inc.</p>
+    </div>
+  </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
